2012-09-05  Kenichi Ishibashi  <bashi@chromium.org>

        Unreviewed, rolling out r127612, r127660, and r127664.
        http://trac.webkit.org/changeset/127612
        http://trac.webkit.org/changeset/127660
        http://trac.webkit.org/changeset/127664
        https://bugs.webkit.org/show_bug.cgi?id=95920

        * DumpRenderTree/chromium/MockWebRTCPeerConnectionHandler.cpp:
        (MockWebRTCPeerConnectionHandler::SuccessCallbackTask::SuccessCallbackTask):
        (MockWebRTCPeerConnectionHandler::SuccessCallbackTask::runIfValid):
        (MockWebRTCPeerConnectionHandler::FailureCallbackTask::FailureCallbackTask):
        (MockWebRTCPeerConnectionHandler::FailureCallbackTask::runIfValid):
        (MockWebRTCPeerConnectionHandler::createOffer):
        * DumpRenderTree/chromium/MockWebRTCPeerConnectionHandler.h:
        (MockWebRTCPeerConnectionHandler):
        (SuccessCallbackTask):
        (FailureCallbackTask):

2012-09-05  Allan Sandfeld Jensen  <allan.jensen@nokia.com>

        Ignore-metrics includes scroll offsets.
        https://bugs.webkit.org/show_bug.cgi?id=95845

        Reviewed by Dirk Pranke.

        Strip scroll-offsets the same way scroll-height and scroll-width is stripped.

        * Scripts/old-run-webkit-tests:
        (stripMetrics):
        * Scripts/webkitpy/layout_tests/port/driver.py:
        (DriverOutput):

2012-09-05  Zan Dobersek  <zandobersek@gmail.com>

        Unreviewed test fix.

        Including a plugin source file into the build that was added in r127595.

        * GNUmakefile.am:

2012-09-05  Tommy Widenflycht  <tommyw@google.com>

        MediaStream API: Add the local and remote description functionality to RTCPeerConnection
        https://bugs.webkit.org/show_bug.cgi?id=95839

        Reviewed by Adam Barth.

        In addition to adding the new methods to MockWebRTCPeerConnectionHandler I cleaned
        up the task definitions a bit. There was no need to have them in the header file.
