@@ -1,3 +1,15 @@
+2012-09-05  Dirk Pranke  <dpranke@chromium.org>
+
+        NRWT lies about the number of tests that it's skipping when used with --repeat-each
+        https://bugs.webkit.org/show_bug.cgi?id=95789
+
+        Reviewed by Ojan Vafai.
+
+        Fix miscalculation in log message.
+
+        * Scripts/webkitpy/layout_tests/views/printing.py:
+        (Printer.print_found):
+
 2012-09-05  Kenichi Ishibashi  <bashi@chromium.org>
 
         Unreviewed, rolling out r127612, r127660, and r127664.
